feat: update API routes to return 201 on creation, openAPI changes
